ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-na-nuvem-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: devops-na-nuvem-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-00626bb97e79fd38e,subnet-0d8143d69e041cfd9
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
